set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fsanitize=address -g -Og")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} -fsanitize=address -g -Og")
find_package(OpenSSL REQUIRED)
find_package(Boost REQUIRED)
include_directories(../include ../thirdparty/rapidjson/include ${OPENSSL_INCLUDE_DIR} ${Boost_INCLUDES})
file(GLOB CPP_SRCS *.cpp)
file(GLOB CPP_HDRS *.hpp ../include/libjose/*.hpp)
add_library(jose SHARED ${CPP_SRCS} ${CPP_HDRS})
add_library(jose_static STATIC ${CPP_SRCS} ${CPP_HDRS})
target_link_libraries(jose ${OPENSSL_CRYPTO_LIBRARY})
