set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fsanitize=address -g -Og")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} -fsanitize=address -g -Og")
find_package(OpenSSL REQUIRED)
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
include_directories(../include ${OPENSSL_INCLUDE_DIR} ${Boost_INCLUDES})
add_definitions (-DBOOST_TEST_DYN_LINK)
file(GLOB CPP_SRCS *.cpp)
foreach(CPP_SRC ${CPP_SRCS})
 get_filename_component(EXE ${CPP_SRC} NAME_WE)
 add_executable(${EXE} ${CPP_SRC})
 target_link_libraries(${EXE} jose_static ${OPENSSL_CRYPTO_LIBRARY} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 add_test(${EXE} ${EXE})
endforeach(CPP_SRC)
